src/main/resources/cpp/tests/neg/N09_method_not_in_static_type.cpp
class A { public: };

int main() {
    A a;
    a.bar(); // Fehler: Methode nicht vorhanden

    return 0;
}
